# SDL2-CLion-Basic-Setup

./: .gitignore  CMakeLists.txt  main.cpp
